--- a/intro.tex
+++ b/intro.tex
@@ -87,12 +87,12 @@ We leverage this trend to reduce a content provider's dependence on the ISPs wit
 
 As shown in Figure~\ref{fig:deploy:arch}, \name implements its source site and destination site functions in a \emph{\inbox} and \emph{\outbox}, respectively. The \inbox of one site pairs with the \outbox of another site when sending traffic to it.\footnote{One \inbox can pair with multiple {\outbox}es and vice versa.} 
 %We thus define a \emph{bundle} to be a group of flows that share the same \inbox-\outbox pair.
-These two middleboxes measure congestion signals such as the round-trip time (RTT) and the rate at which packets are received, and passes these signals to a congestion control algorithm at the sendbox (\S\ref{s:design}) to dynamically compute the bundle's sending rate.
+These two middleboxes measure congestion signals such as the round-trip time (RTT) and the rate at which packets are received, and pass these signals to a congestion control algorithm at the sendbox (\S\ref{s:design}) to dynamically compute the bundle's sending rate.
 %The \inbox passes these signals to a delay-based congestion control algorithm (as described in \S\ref{s:design}) which computes appropriate sending rates for each bundle, such that the queuing induced by the bundled traffic within the network is low and is incurred at the \inbox instead, while still maintaining high utilization at the bottleneck link.
 We introduce a lightweight method for the coordination between the \inbox and the \outbox that does not require any per-flow state and can be deployed in a mode that forwards packets without modification.  \name requires no changes to the end hosts or to network routers.
  
 Our focus thus far has been to control traffic only within a given bundle and not across different bundles. 
-Furthermore, as we will discuss in \S\ref{s:deploy}, there may be instances where \name cannot improve performance for the bundled traffic, and falls back to the status quo; \ie the performance achieved today when queues build in the network instead of the edge. For example, when traffic between the two sites traverses different paths with different levels of congestion, \name will detect this and performance will revert to the status quo, but if all of these paths have the same rates, then performance will improve. 
+Furthermore, as we will discuss in \S\ref{s:deploy}, there may be instances where \name cannot improve performance for the bundled traffic, and falls back to the status quo; \ie the performance achieved today when queues build in the network instead of the edge. For example, when traffic between the two sites traverses different paths with different levels of congestion, \name will detect this and performance will revert to the status quo, but if all of these paths have the same rates, then performance will improve.\fc{<- can we cut last phrase?}
  
 In emulated scenarios (\S\ref{s:eval}), we demonstrate that \name successfully enables scheduling benefits. In particular, when configured to use Stochastic Fairness Queueing (SFQ),
 \name reduces the median flow completion time (FCT) of a representative flow size distribution between 28\% to 97\% across a variety of scenarios. Furthermore, these performance benefits are within 15\% of what would be achievable if (optimal) in-network scheduling were a possibility.
