clarify implications of real world experiments

--- a/ecmp.tex
+++ b/ecmp.tex
@@ -17,18 +17,22 @@
 }
 
 \input{realworld}
-We next evaluate our prototype implementation on real Internet paths to answer three key questions that our emulated setup did not answer: (1) Does congestion (and queuing) actually occur in the middle of the network? (2) Is buffer-filling cross traffic rare enough in practice to ensure that \name provides a net improvement in performance? and (3) Is \name's design robust to possible multi-pathing effects in a real network?  
-Our results reveal an affirmative answer for all three questions. We explain our experiment setup and results below. 
+We next evaluate our prototype implementation on real Internet paths to demonstrate that \name can effectively shift queues in practical settings.
+% We next evaluate our prototype implementation on real Internet paths to answer three key questions that our emulated setup did not answer: (1) Does congestion (and queuing) actually occur in the middle of the network? (2) Is buffer-filling cross traffic rare enough in practice to ensure that \name provides a net improvement in performance? and (3) Is \name's design robust to possible multi-pathing effects in a real network? Our results reveal an affirmative answer for all three questions. We explain our experiment setup and results below. 
 
 \Para{Experiment Setup} 
 We deploy \name (\inbox) in a GCP datacenter in Iowa and generate traffic from multiple different machines in this datacenter (as detailed below). 
 The generated traffic is sent to multiple machines in five different GCP datacenters (in Belgium, Frankfurt, Oregon, South Carolina, and Tokyo). We configured GCP to route traffic over the public Internet rather than a private network. 
 We deploy a \name (\outbox) in each of these receiving datacenters, thus resulting in a total of five bundles spanning different regions of the globe.
+
 We evaluate two different workloads in this setup: (i) Each bundle comprising of 10 parallel closed-loop 40 bytes UDP requests, where the sender issues a new request every time it receives a response. We measure the request-response RTTs in this workload to use as a baseline (and call them Base RTTs). (ii) We add 20 backlogged (\texttt{iperf}) flows to the above workload in each bundle. We run this workload both with and without \name and measure the UDP request-response RTTs (represented as \name and \baseline respectively). Effective SFQ across all flows with \name should not inflate the base request-response RTT.
 We verified that the backlogged senders achieve similar throughput in all cases (2-4Gbit/s on these paths) both with and without \name, and that the \name machine in Iowa is not a bottleneck itself. 
 
 \Para{Result} 
-Figure~\ref{fig:eval:realworld} shows, for each of the five bundles, the resulting RTT box-plots for each of the ten request-response loops (with the 5 tuples in UDP/IP headers differing across all ten). 
-We make the following key observations: (i) The \baseline RTTs are significantly higher than the Base RTT, which indicates significant in-network queueing. (ii) \name is able to move these queues and enforce SFQ scheduling effectively, resulting in request-response RTTs comparable to Base RTTs, and \realworldMedianLatencyImprovement smaller than \baseline at the median.
+Figure~\ref{fig:eval:realworld} shows, for each of the five bundles, the resulting RTT distributions for each of the ten request-response loops (with the 5 tuples in UDP/IP headers differing across all ten). 
+We make two key observations: (i) The \baseline RTTs are significantly higher than the Base RTT, which indicates significant queueing outside of either site's control. (ii) \name is able to move these queues and enforce SFQ scheduling effectively, resulting in request-response RTTs comparable to Base RTTs, and \realworldMedianLatencyImprovement smaller than \baseline at the median.
 % (iii) The \baseline results further reveal that different request-response loops within a given bundle see different amounts of queueing in the network. This indicates possible ECMP load-balancing in the network based on the 5 tuples, and how \name is robust to its effects.
 
+\Para{Explanation}
+Observation (i) above indicates that all of the conditions in \S\ref{s:deploy} held during our experiment and that queues were indeed building outside of our control. One possibility is that these queues built up at an egress rate limiter imposed by GCP. However, our throughput measurements suggest that this is unlikely; we used \texttt{n1-standard-2} machines, which have a maximum possible egress of 10Gbps each, but our backlogged senders achieved only 2-4Gbps. Nevertheless, even if queues were building at GCP's rate limiter, this still represents a scenario where \name would be useful: the bottleneck may occasionally be somewhere further in the network, and in either case, \name would allow the operator to enforce scheduling policies without knowing or caring where the bottleneck occurs.
+% In other words, it allows an an operator to enforce scheduling policies on their traffic without negotiating their policy with the cloud provider or knowing where the bottleneck occurs.
